--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "mdb-angular-ui-kit": "^1.5.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.0.0-rc.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
